--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "scp-subject-files",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
